# CycleAnalytics

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  requirements_test.txt
.github/workflows/: test.yml
conf/: settings.toml  tables.toml
cycle_analytics/: __init__.py  adders.py  bikes.py  db.py  enums.py  events.py  forms.py  goals.py  landing_page.py  locations.py  model.py  overview.py  plotting.py  queries.py  rest_models.py  ride.py  segments.py  serve.py  settings.py  track.py  utils.py
cycle_analytics/database/: converter.py  creator.py  model.py  modifier.py  retriever.py
cycle_analytics/model/: base.py  exceptions.py  goal.py
cycle_analytics/static/: add_segment.js  custom.css  map_utils.js  segment.js  trim.js  utilities.js
cycle_analytics/static/img/: README.md
cycle_analytics/templates/: add_track_to_ride_form.html  base.html  calender.html  compare_tracks.html  events.html  goals.html  journal.html  landing_page.html  nav.html  overview.html  ride.html  segment_track.html  settings.html  show_bike.html  trim_track.html  zones.html
cycle_analytics/templates/adders/: bike.html  event.html  goal.html  goal_selection.html  location.html  ride.html  ride_note.html
cycle_analytics/templates/locations/: overview.html  show.html
cycle_analytics/templates/segments/: add_from_map.html  overview.html  show.html
cycle_analytics/templates/tiles/: goals.html  last_ride.html  recent_events.html  summary.html  weekly_distance.html
cycle_analytics/templates/utils/: compare_track_file_input.html  compare_track_track_input.html  manual_goal_mod_form.html  modify_zones.html  zone_template.html
cycle_analytics/templates/visualizations/: heatmap.html
cycle_analytics/utils/: __init__.py  base.py  debug.py  forms.py  track.py  view_data.py
docker/: Dockerfile  README.md  dev.env  docker-compose.dev.yml  docker-compose.yml  prod.env
requirements/: dev.in  dev.txt  prod.txt  test.in  test.txt
tests/: conftest.py  generate_data.py  test_add.py  test_add_event.py  test_add_goal.py  test_add_location.py  test_add_ride.py  test_database.py  test_goals.py  test_locations.py  test_modify_goals.py  test_ride.py  test_segments.py  test_settings.py  test_track_add_segments.py  test_track_compare.py  test_trim.py  test_utils.py  test_views.py
tests/resources/: Feldberg.gpx  Freiburger_Münster_nach_Schau_Ins_Land.gpx  Loretto_Route_1.gpx  Loretto_Route_2.gpx  Oberer_teil_Schau_ins_land.gpx  Oberer_teil_Schau_ins_land_enhanced.gpx  Teilstueck_Schau_ins_land.gpx
