[tool.poetry]
name = "cycle-analytics"
version = "0.1.0"
description = "WApp for tracking, analyzing, and visualizing bicycle rides and gps tracks"
authors = ["Korbinian Schweiger <korbinian.schweiger@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "cycle_analytics" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
Flask = "^3.0.2"
Flask-Caching = "^2.1.0"
gunicorn = "^21.2.0"
dynaconf = "^3.2.4"
flask-wtf = "^1.2.1"
kaleido = "0.2.1"
pyroutelib3 = "^1.7.2"
pydantic = "^2.6.1"
redis = "^5.0.1"
wtforms = "^3.1.2"
plotly = "^5.19.0"
sqlalchemy = "^2.0.27"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
geo-track-analyzer = "^1.2.0"
flask-debugtoolbar = "^0.14.1"
debugpy = "^1.8.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pre-commit = "^3.6.1"
ruff = "~0.2.1"
bpython = "^0.24"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
pytest-sugar = "^1.0.0"
pytest-dependency = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "PD", "PT", "NPY", "N", "W", "RET", "ANN", "RUF"]
unfixable = ["F841", "RUF005", "RUF015"]
ignore = [
    "ANN101",
    "RUF009",
    "E731",
    "RET505",
    "ANN002",
    "ANN003",
    "RUF005",
    "RUF007",
]
ignore-init-module-imports = true


[tool.mypy]
python_version = "3.10"
strict_optional = true
check_untyped_defs = true
exclude = ["tests/*"]

[[tool.mypy.overrides]]
module = "fitparse.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "coloredlogs.*"
ignore_missing_imports = true
