[tool.poetry]
name = "cycle-analytics"
version = "0.1.0"
description = "WApp for tracking, analyzing, and visualizing bicycle rides and gps tracks"
authors = ["Korbinian Schweiger <korbinian.schweiger@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "cycle_analytics" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
Flask = "^3.0.3"
Flask-Caching = "^2.3.0"
gunicorn = "^22.0.0"
dynaconf = "^3.2.6"
flask-wtf = "^1.2.1"
kaleido = "0.2.1"
pyroutelib3 = ">=1,<2"
pydantic = "^2.8.2"
redis = "^5.0.8"
wtforms = "^3.1.2"
plotly = "^5.23.0"
sqlalchemy = "^2.0.32"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
geo-track-analyzer = "^1.4.4"
flask-debugtoolbar = "^0.14.1"
debugpy = "^1.8.5"
tldextract = "^5.1.2"
httpx = "^0.27.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
pre-commit = "^3.8.0"
ruff = "~0.5.7"
bpython = "^0.24"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
pytest-sugar = "^1.0.0"
pytest-dependency = "^0.6.0"
freezegun = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "PD",
  "PT",
  "NPY",
  "N",
  "W",
  "RET",
  "ANN",
  "RUF",
  "SIM",
  "PERF",
]
unfixable = ["F841", "RUF015"]
ignore = [
  "ANN002",
  "ANN003",
  "ANN101",
  "RET502",
  "RET505",
  "RUF005",
  "RUF009",
  "E731",
]


[tool.mypy]
python_version = "3.10"
strict_optional = true
check_untyped_defs = true
exclude = ["tests/*"]

[[tool.mypy.overrides]]
module = "fitparse.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "coloredlogs.*"
ignore_missing_imports = true
