[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cycle-analytics"
description = "WebApp for tracking, analyzing, and visualizing bicycle rides and gps tracks"
authors = [
  { name = "Korbinian Schweiger", email = "korbinian.schweiger@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
  "Flask>=3,<4",
  "Flask-Caching>=2.3,<2.4",
  "flask-wtf>=1.2,<1.3",
  "wtforms>=3,<4",
  "flask-sqlalchemy>=3,<4",
  "sqlalchemy>=2,<3",
  "psycopg2",
  "kaleido",
  "gunicorn",
  "dynaconf>=3,<4",
  "pyroutelib3>=1,<2",
  "pydantic>=2,<3",
  "redis>=5,<6",
  "plotly",
  "geo-track-analyzer>=1.6,<2",
  "tldextract",
  "httpx",
  "pandas",
  # In prod deps so dev and debug container are simple to use
  "flask-debugtoolbar",
  "debugpy",
]

[tool.setuptools_scm]
[tool.setuptools]
packages = ["cycle_analytics"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "PD",
  "PT",
  "NPY",
  "N",
  "W",
  "RET",
  "ANN",
  "RUF",
  "SIM",
  "PERF",
]
unfixable = ["F841", "RUF015"]
ignore = [
  "ANN002",
  "ANN003",
  "ANN101",
  "RET502",
  "RET505",
  "RUF005",
  "RUF009",
  "E731",
]


[tool.mypy]
python_version = "3.10"
strict_optional = true
check_untyped_defs = true
exclude = ["tests/*"]

[[tool.mypy.overrides]]
module = "fitparse.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true
